Add gitconfig and some bin pathes

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -11,6 +11,7 @@
     ~/.bash_prompt: bash_prompt
     ~/.bashrc: bashrc
     ~/.exports: exports
+    ~/.gitconfig: gitconfig
 
 - create:
     - ~/downloads
