Fix bug on RHEL7 with tmux 3.0 considering Home and End Key

--- a/tmux.conf
+++ b/tmux.conf
@@ -2,6 +2,9 @@ set-option -g prefix C-a
 bind-key C-a last-window
 bind-key a send-prefix
 
+bind-key -n Home send Escape "OH"
+bind-key -n End send Escape "OF"
+
 bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
 
 is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
