Add yaml filetype to vimrc

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -16,6 +16,7 @@
     ~/.gitconfig: gitconfig
     ~/.inputrc: inputrc
     ~/.tmux.conf: tmux.conf
+    ~/.vimrc: vimrc
 
 - create:
     - ~/downloads
